Update display to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,9 @@ body {
     padding: 0 10px;
     box-sizing: border-box;
     box-shadow: 2px 2px 4px 0 inset;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
 }
 
 .buttons {
